Update runOnWindows.ps1