@@ -1,2 +1,3 @@
+javac --module-path "$((get-location).path)\lib\javafx-sdk-11.0.2\lib" --add-modules=javafx.controls .\src\graphmakerwindow\*.java
 java -classpath "$((get-location).path)\src\"  --module-path "$((get-location).path)\lib\javafx-sdk-11.0.2\lib" --add-modules=javafx.controls graphmakerwindow.GraphmakerWindow
 pause
